--- a/index.html
+++ b/index.html
@@ -1,53 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-50x50.png">
-  <title>Leonidas Esteban | Recreando Netflix</title>
-  <style>
-    .credits {
-      font-family: system-ui;
-      background: #212429;
-      font-size: 11px;
-      color: white;
-      padding: 0.5rem 0;
-      text-align: center;
-    }
-    .credits a {
-      color: #F865B0;
-      text-decoration: none;
-    }
-  </style>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/logo-netflix.png"
+    />
+    <link rel="stylesheet" href="static/css/styles.css" />
+    <title>NETFLIX</title>
+  </head>
+  <body>
+    <header class="header">
+      <nav>
+        <img class="logo" src="images/logo-netflix.png" alt="" />
+        <ul class="navigation">
+          <li class="navigation-item"><a href="#">Series</a></li>
+          <li class="navigation-item"><a href="#">Películas</a></li>
+          <li class="navigation-item"><a href="#">Mi lista</a></li>
+        </ul>
+      </nav>
+    </header>
 
-  Series
-  Películas
-  Mi lista
+    <div class="featured">
+      <video class="premiere" src="images/matrix.mp4"></video>
+      <div class="featured-details">
+        <ul class="tags">
+          <li class="tag">Surrealista</li>
+          <li class="tag">Distópico</li>
+          <li class="tag">Hábil</li>
+          <li class="tag">Siniestro</li>
+          <li class="tag">Emocionante</li>
+        </ul>
+        <div class="featured-actions">
+          <button class="button-secondary plus">Mi lista</button>
+          <button class="button play">Reproducir</button>
+          <button class="button-secondary info">Info</button>
+        </div>
+      </div>
+    </div>
 
-  Surrealista
-  Distópico
-  Hábil
-  Siniestro
-  Emocionante
+    Populares en Netflix Series japonesas anime Series de EE.UU. sobre crimenes
+    Inicio Próximamente Buscar Descargas
 
-  Mi lista
-  Reproducir
-  Info
-
-  Populares en Netflix
-  Series japonesas anime
-  Series de EE.UU. sobre crimenes
-
-  Inicio
-  Próximamente
-  Buscar
-  Descargas
-
-  <div class="credits">
-    Diseñado con 💗 por
-    <a href="https://leonidasesteban.com/" target="_blank">leonidasesteban.com</a>
-  </div>
-</body>
+    <div class="credits">
+      Diseñado con 💗 por
+      <a href="https://leonidasesteban.com/" target="_blank"
+        >leonidasesteban.com</a
+      >
+    </div>
+  </body>
 </html>
