The chalenge is almost done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="./images/logo-netflix.png"
     />
     <link rel="stylesheet" href="static/css/styles.css" />
-    <title>NETFLIX</title>
+    <title>reto-NETFLIX</title>
   </head>
   <body>
     <header class="header">
@@ -35,21 +35,180 @@
           <li class="tag">Emocionante</li>
         </ul>
         <div class="featured-actions">
-          <button class="button-secondary plus">Mi lista</button>
-          <button class="button play">Reproducir</button>
-          <button class="button-secondary info">Info</button>
+          <button class="button-secondary icon-plus">Mi lista</button>
+          <button class="button icon-play">Reproducir</button>
+          <button class="button-secondary icon-info">Info</button>
         </div>
       </div>
     </div>
 
-    Populares en Netflix Series japonesas anime Series de EE.UU. sobre crimenes
-    Inicio Próximamente Buscar Descargas
+    <main>
+      <div class="list">
+        <h2 class="list-tittle">Populares en Netflix</h2>
+        <div class="list-content">
+          <div class="list-item">
+            <a href="#" class="" id="">
+              <img src="./images/covers/matrix.png" alt="Matrix recargado" />
+            </a>
+          </div>
+          <div class="list-item">
+            <a href="#" class="" id="">
+              <img
+                src="./images/covers/bob.png"
+                alt="Bob Esponja la pelicula"
+              />
+            </a>
+          </div>
+          <div class="list-item">
+            <a href="#" class="" id="">
+              <img
+                src="./images/covers/spider-man.png"
+                alt="El sorprendente hombre araña"
+              />
+            </a>
+          </div>
+          <div class="list-item">
+            <a href="#" class="" id="">
+              <img
+                src="./images/covers/dragon.png"
+                alt="Como entrener a tu dragon"
+              />
+            </a>
+          </div>
+          <div class="list-item">
+            <a href="#" class="" id="">
+              <img src="./images/covers/john.png" alt="John Wick 3" />
+            </a>
+          </div>
+          <div class="list-item">
+            <a href="#" class="" id="">
+              <img
+                src="./images/covers/santa.png"
+                alt="Las cronicas de navidad"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
 
-    <div class="credits">
-      Diseñado con 💗 por
-      <a href="https://leonidasesteban.com/" target="_blank"
-        >leonidasesteban.com</a
-      >
-    </div>
+      <div class="list">
+        <h2 class="list-title">Series japonesas anime</h2>
+        <div class="list-content">
+          <div class="list-item">
+            <a href="#" class="" id="">
+              <img src="./images/covers/matrix.png" alt="Matrix recargado" />
+            </a>
+          </div>
+          <div class="list-item">
+            <a href="#" class="" id="">
+              <img
+                src="./images/covers/bob.png"
+                alt="Bob Esponja la pelicula"
+              />
+            </a>
+          </div>
+          <div class="list-item">
+            <a href="#" class="" id="">
+              <img
+                src="./images/covers/spider-man.png"
+                alt="El sorprendente hombre araña"
+              />
+            </a>
+          </div>
+          <div class="list-item">
+            <a href="#" class="" id="">
+              <img
+                src="./images/covers/dragon.png"
+                alt="Como entrener a tu dragon"
+              />
+            </a>
+          </div>
+          <div class="list-item">
+            <a href="#" class="" id="">
+              <img src="./images/covers/john.png" alt="John Wick 3" />
+            </a>
+          </div>
+          <div class="list-item">
+            <a href="#" class="" id="">
+              <img
+                src="./images/covers/santa.png"
+                alt="Las cronicas de navidad"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="list">
+        <h2>Series de EE.UU. sobre crimenes</h2>
+        <div class="list-content">
+          <div class="list-item">
+            <a href="#" class="" id="">
+              <img src="./images/covers/matrix.png" alt="Matrix recargado" />
+            </a>
+          </div>
+          <div class="list-item">
+            <a href="#" class="" id="">
+              <img
+                src="./images/covers/bob.png"
+                alt="Bob Esponja la pelicula"
+              />
+            </a>
+          </div>
+          <div class="list-item">
+            <a href="#" class="" id="">
+              <img
+                src="./images/covers/spider-man.png"
+                alt="El sorprendente hombre araña"
+              />
+            </a>
+          </div>
+          <div class="list-item">
+            <a href="#" class="" id="">
+              <img
+                src="./images/covers/dragon.png"
+                alt="Como entrener a tu dragon"
+              />
+            </a>
+          </div>
+          <div class="list-item">
+            <a href="#" class="" id="">
+              <img src="./images/covers/john.png" alt="John Wick 3" />
+            </a>
+          </div>
+          <div class="list-item">
+            <a href="#" class="" id="">
+              <img
+                src="./images/covers/santa.png"
+                alt="Las cronicas de navidad"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <ul class="tab-list">
+        <li class="tab-item">
+          <a href="#">Inicio</a>
+        </li>
+        <li class="tab-item">
+          <a href="#">Proximamente</a>
+        </li>
+        <li class="tab-item">
+          <a href="#">Buscar</a>
+        </li>
+        <li class="tab-item">
+          <a href="#">Descargas</a>
+        </li>
+      </ul>
+      <div class="credits">
+        Diseñado con 💗 por
+        <a href="https://leonidasesteban.com/" target="_blank"
+          >leonidasesteban.com</a
+        >
+      </div>
+    </footer>
   </body>
 </html>
