--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
     </header>
 
     <div class="featured">
-      <video class="premiere" src="images/matrix.mp4"></video>
+      <video
+        muted
+        autoplay
+        loop
+        class="premiere"
+        src="images/matrix.mp4"
+      ></video>
       <div class="featured-details">
         <ul class="tags">
           <li class="tag">Surrealista</li>
